..F....... [ZBX-16874] fixed invisible map-type widgets in Chrome

--- a/frontends/php/assets/styles/blue-theme.css
+++ b/frontends/php/assets/styles/blue-theme.css
@@ -4073,6 +4073,8 @@ svg {
   overflow: hidden;
   height: 100%;
   display: flex; }
+  .sysmap-widget-container svg {
+    flex-grow: 1; }
 
 @supports (-ms-ime-align: auto) {
   .navtree .problems {
