--- a/frontends/php/assets/styles/dark-theme.css
+++ b/frontends/php/assets/styles/dark-theme.css
@@ -4100,6 +4100,8 @@ svg {
   overflow: hidden;
   height: 100%;
   display: flex; }
+  .sysmap-widget-container svg {
+    flex-grow: 1; }
 
 @supports (-ms-ime-align: auto) {
   .navtree .problems {
