--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -5833,6 +5833,10 @@ svg {
 	overflow: hidden;
 	height: 100%;
 	display: flex;
+
+	svg {
+		flex-grow: 1;
+	}
 }
 
 @supports (-ms-ime-align:auto) {
